--- a/src/main/resources/templates/helloworld.html
+++ b/src/main/resources/templates/helloworld.html
@@ -9,7 +9,8 @@
 
 	</head>
 
-	
-	<p th:text="'Time on the server is ' + ${theDate}" class="funny" />
+	<body>
+		<p th:text="'Time on the server is ' + ${theDate}" class="funny" />
+	</body>
 	
 </html>
